semana05, dia01, css reto results summary

--- a/semana05/dia01-css-reto1-results-sumary/index.html
+++ b/semana05/dia01-css-reto1-results-sumary/index.html
@@ -22,16 +22,16 @@
     </section>
     
     <section class="list">
-      <h3>Summary</h3>
+      <h3 class="list__title">Summary</h3>
 
       <div class="list__wrapper">
 
         <div class="list__row list__row--reaction">
-          <div class="list__title">
+          <div class="list-row__title">
             <img src="./assets/images/icon-reaction.svg" alt="reaction icon" />
             Reaction
           </div>
-          <div class="list__stats">
+          <div class="list-row__stats">
             <span>80</span>
             <span>/</span>
             <span>100</span>
@@ -39,11 +39,11 @@
         </div>
 
         <div class="list__row list__row--memory">
-          <div class="list__title">
+          <div class="list-row__title">
             <img src="./assets/images/icon-memory.svg" alt="memory icon" />
             Memory
           </div>
-          <div class="list__stats">
+          <div class="list-row__stats">
             <span>92</span>
             <span>/</span>
             <span>100</span>
@@ -51,11 +51,11 @@
         </div>
 
         <div class="list__row list__row--verbal">
-          <div class="list__title">
+          <div class="list-row__title">
             <img src="./assets/images/icon-verbal.svg" alt="verbal icon" />
             Verbal
           </div>
-          <div class="list__stats">
+          <div class="list-row__stats">
             <span>61</span>
             <span>/</span>
             <span>100</span>
@@ -63,11 +63,11 @@
         </div>
 
         <div class="list__row list__row--visual">
-          <div class="list__title">
+          <div class="list-row__title">
             <img src="./assets/images/icon-visual.svg" alt="visual icon" />
             Visual
           </div>
-          <div class="list__stats">
+          <div class="list-row__stats">
             <span>72</span>
             <span>/</span>
             <span>100</span>
