semana05, dia01, css reto results summary

--- a/semana05/dia01-css-reto1-results-sumary/index.html
+++ b/semana05/dia01-css-reto1-results-sumary/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <!-- TODO: Maquetar en HTML el diseño de este reto -->
-  <main class="summary">
+  <main class="summary wrapper">
     <section class="result">
       <h3 class="result__subtitle">Your Result</h3>
       
