--- a/semana05/dia02-01-bootstrap/index.html
+++ b/semana05/dia02-01-bootstrap/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Aprendiendo Bootstrap</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
   <nav class="navbar navbar-expand-lg bg-body-tertiary">
@@ -32,7 +33,29 @@
     </div>
   </nav>
 
-  <h1>Hello, world!</h1>
+  <section class="m-5">
+    <h1 class="px-3 py-5 border">Hello, world!</h1>
+
+    <button type="button" class="">Base</button>
+    <button type="button" class="btn">Btn</button>
+    <button type="button" class="btn btn-success">Success</button>
+    <button type="button" class="btn btn-danger">Danger</button>
+    <button type="button" class="btn btn-warning">Warning</button>
+  </section>
+
+  <section class="container border p-3">
+    .container
+  </section>
+
+  <section class="container px-0 py-3">
+    <div class="alert alert-warning" role="alert">
+      A simple warning alert—check it out!
+    </div>
+  </section>
+
+  <section class="ejemplo">
+    Estilos personalizados con bootstrap
+  </section>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
