semana05, dia02, css bootstrap

--- a/semana05/dia02-01-bootstrap/index.html
+++ b/semana05/dia02-01-bootstrap/index.html
@@ -53,8 +53,32 @@
     </div>
   </section>
 
-  <section class="ejemplo">
+  <section class="container ejemplo px-0">
     Estilos personalizados con bootstrap
+  </section>
+
+  <section class="container py-3 d-flex gap-3 px-0">
+    <div class="card" style="width: 18rem;">
+      <img src="https://placehold.co/286x180" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        <a href="#" class="btn btn-primary">Go somewhere</a>
+      </div>
+    </div>
+
+    <div class="card" style="width: 18rem;">
+      <img src="https://placehold.co/286x180" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        <a href="#" class="btn btn-primary">Go somewhere</a>
+      </div>
+    </div>
+  </section>
+
+  <section class="container py-3 px-0">
+    -> Bootstrap GRID <-
   </section>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
