--- a/semana05/dia02-01-bootstrap/index.html
+++ b/semana05/dia02-01-bootstrap/index.html
@@ -77,8 +77,54 @@
     </div>
   </section>
 
-  <section class="container py-3 px-0">
-    -> Bootstrap GRID <-
+  <section class="container py-3 px-0 text-center">
+    <div class="row">
+      <div class="col-6 border">
+        Column1
+      </div>
+      <div class="col-3 border">
+        Column
+      </div>
+      <div class="col-3 border">
+        Column
+      </div>
+    </div>
+
+    <div class="row mt-5 border">
+      <div class="col">
+        Column
+      </div>
+      <div class="col">
+        Column
+      </div>
+      <div class="col">
+        Column
+      </div>
+      <div class="col">
+        Column
+      </div>
+      <div class="col">
+        Column
+      </div>
+      <div class="col">
+        Column
+      </div>
+    </div>
+
+    <div class="row mt-5">
+      <div class="col border">Col 1</div>
+      <div class="col border">Col 2</div>
+      <div class="col border">Col 3</div>
+      <div class="col border">Col 4</div>
+      <div class="col border">Col 5</div>
+      <div class="col border">Col 6</div>
+      <div class="col border">Col 7</div>
+      <div class="col border">Col 8</div>
+      <div class="col border">Col 9</div>
+      <div class="col border">Col 10</div>
+      <div class="col border">Col 11</div>
+      <div class="col border">Col 12</div>
+    </div>
   </section>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
