semana05, dia02, css bootstrap

--- a/semana05/dia02-01-bootstrap/index.html
+++ b/semana05/dia02-01-bootstrap/index.html
@@ -117,7 +117,7 @@
       <div class="col border">Col 3</div>
       <div class="col border">Col 4</div>
       <div class="col border">Col 5</div>
-      <div class="col border">Col 6</div>
+      <div class="col-xl-4 border">Col 6</div>
       <div class="col border">Col 7</div>
       <div class="col border">Col 8</div>
       <div class="col border">Col 9</div>
