--- a/semana05/dia02-02-sass/index.html
+++ b/semana05/dia02-02-sass/index.html
@@ -7,6 +7,15 @@
   <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-  
+  <h1>Aprendiendo SASS</h1>
+
+  <div class="card card--success">
+    <div class="card__header">
+      <div class="card__title">Card title</div>
+    </div>
+    <div class="card__body">
+      Card content
+    </div>
+  </div>
 </body>
 </html>
