semana05, dia02, css bootstrap

--- a/semana05/dia03-01-css-github-user-app/index.html
+++ b/semana05/dia03-01-css-github-user-app/index.html
@@ -29,7 +29,18 @@
     </search>
 
     <section class="profile__info">
-      
+      <img src="https://placehold.co/120x120" />
+
+      <div class="profile__content">
+        <div class="profile__user">
+          <h1 class="profile__fullname">The Octocat</h1>
+          <span class="profile__joined-date">Joined 10 Jan 2025</span>
+        </div>
+
+        <span class="profile__username">@octocat</span>
+
+        <p class="profile__bio">This profile has no bio</p>
+      </div>
     </section>
   </main>
 </body>
