semana05, dia03, css github user app reto

--- a/semana05/dia03-01-css-github-user-app/index.html
+++ b/semana05/dia03-01-css-github-user-app/index.html
@@ -41,6 +41,40 @@
 
         <p class="profile__bio">This profile has no bio</p>
       </div>
+
+      <div class="profile__data">
+        <div class="profile__value">
+          Repos
+          <span>8</span>
+        </div>
+        <div class="profile__value">
+          Followers
+          <span>3938</span>
+        </div>
+        <div class="profile__value">
+          Following
+          <span>9</span>
+        </div>
+      </div>
+
+      <div class="profile__links">
+        <div class="profile__link">
+          <img src="./images/icon-map-pin.svg" />
+          San Francisco
+        </div>
+        <div class="profile__link profile__link--unavailable">
+          <img src="./images/brand-x.svg" />
+          Not Available
+        </div>
+        <div class="profile__link">
+          <img src="./images/icon-link.svg" />
+          https://github.blog
+        </div>
+        <div class="profile__link">
+          <img src="./images/icon-buildings.svg" />
+          @github
+        </div>
+      </div>
     </section>
   </main>
 </body>
