semana05, dia03, css github user app reto

--- a/semana05/dia03-01-css-github-user-app/index.html
+++ b/semana05/dia03-01-css-github-user-app/index.html
@@ -22,7 +22,7 @@
     <search class="profile__search">
       <form class="profile__form">
         <label class="profile__label">
-          <img class="profile__icon-search" src="./images/icon-search.svg" />
+          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="icon icon-tabler icons-tabler-outline icon-tabler-search profile__icon-search"><path stroke="none" d="M0 0h24v24H0z"/><path d="M3 10a7 7 0 1 0 14 0 7 7 0 1 0-14 0M21 21l-6-6"/></svg>
           <input class="profile__input-text" type="text" placeholder="Search github username..." autofocus />
         </label>
         <input class="profile__input-submit" type="submit" value="Search" />
