--- a/semana07/dia01-01-js-events-key-detect-app/index.html
+++ b/semana07/dia01-01-js-events-key-detect-app/index.html
@@ -4,8 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>JS Key Detect</title>
+  <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
 </head>
-<body>
-  <h1>JS Key Detect</h1>
+<body class="bg-emerald-200 h-screen flex items-center justify-center">
+  <main class="w-80 bg-yellow-300 p-4 rounded-lg flex flex-col items-center gap-4">
+    <h1 class="text-2xl font-bold">JS Key Detect</h1>
+    <section class="bg-red-400 w-16 h-16 rounded-full flex justify-center items-center text-4xl font-bold text-white">00</section>
+    <section class="bg-red-300 w-32 h-16 rounded-lg flex justify-center items-center text-4xl font-bold text-white">-</section>
+    <p class="text-slate-800 font-semibold">Press any key</p>
+  </main>
 </body>
 </html>
