semana07, dia01, javascript eventos dom key detect app

--- a/semana07/dia01-01-js-events-key-detect-app/index.html
+++ b/semana07/dia01-01-js-events-key-detect-app/index.html
@@ -5,13 +5,29 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>JS Key Detect</title>
   <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
+  <style>
+    /* SELECTORES POR ETIQUETA(h1), ID(#ejemplo), CLASES(.ejemplo)*/
+  </style>
 </head>
 <body class="bg-emerald-200 h-screen flex items-center justify-center">
   <main class="w-80 bg-yellow-300 p-4 rounded-lg flex flex-col items-center gap-4">
-    <h1 class="text-2xl font-bold">JS Key Detect</h1>
+    <h1 class="text-2xl font-bold hola">JS Key Detect</h1>
     <section class="bg-red-400 w-16 h-16 rounded-full flex justify-center items-center text-4xl font-bold text-white">00</section>
     <section class="bg-red-300 w-32 h-16 rounded-lg flex justify-center items-center text-4xl font-bold text-white">-</section>
     <p class="text-slate-800 font-semibold">Press any key</p>
   </main>
+
+  <script>
+    
+
+    /*
+    // DOM - Document Object Model
+    console.log({ resultado: document.querySelector('h1') }) // Imprime la representación de la etiqueta H1 como un objeto de javascript
+
+    const elementoH1 = document.querySelector('h1')
+
+    elementoH1.textContent = 'Cualquier otro título'
+    */
+  </script>
 </body>
 </html>
