--- a/semana07/dia01-01-js-events-key-detect-app/index.html
+++ b/semana07/dia01-01-js-events-key-detect-app/index.html
@@ -13,13 +13,13 @@
   <main class="w-80 bg-yellow-300 p-4 rounded-lg flex flex-col items-center gap-4">
     <h1 class="text-2xl font-bold hola">JS Key Detect</h1>
     <section id="keyCode" class="bg-red-400 w-44 h-16 rounded-lg flex justify-center items-center text-4xl font-bold text-white">00</section>
-    <section id="character" class="bg-red-300 w-44 h-16 rounded-lg flex justify-center items-center text-4xl font-bold text-white">-</section>
+    <section class="character bg-red-300 w-44 h-16 rounded-lg flex justify-center items-center text-4xl font-bold text-white">-</section>
     <p class="text-slate-800 font-semibold">Press any key</p>
   </main>
 
   <script>
     const sectionKeyCode = document.querySelector('#keyCode')
-    const sectionCharacter = document.querySelector('#character')
+    const sectionCharacter = document.querySelector('.character')
 
     console.log({ sectionKeyCode, sectionCharacter })
 
