semana07, dia01, javascript eventos dom key detect app

--- a/semana07/dia01-01-js-events-key-detect-app/index.html
+++ b/semana07/dia01-01-js-events-key-detect-app/index.html
@@ -26,7 +26,7 @@
     document.addEventListener('keydown', function(event) {
       // console.log('presionando tecla...', event)
       console.log(event.key) // Tecla presionada
-      console.log(event.keyCode) // Codigo ASCII de la tecla presionada
+      console.log(event.keyCode) // Codigo de la tecla presionada
 
       sectionKeyCode.textContent = event.key
       sectionCharacter.textContent = event.keyCode
