semana07, dia01, javascript eventos dom calculadora tailwind

--- a/semana07/dia01-02-js-calculadora-tailwind/index.html
+++ b/semana07/dia01-02-js-calculadora-tailwind/index.html
@@ -12,7 +12,7 @@
 
     <section class="flex flex-col gap-4">
       <input
-        class="border px-2 py-2 text-right text-xl font-bold bg-white"
+        class="inputDisplay border px-2 py-2 text-right text-xl font-bold bg-white"
         type="text"
         value="0"
         readonly
