semana07, dia01, javascript reto imc app (dia02 continuación)

--- a/semana07/dia01-03-js-reto-imc-app/index.html
+++ b/semana07/dia01-03-js-reto-imc-app/index.html
@@ -13,17 +13,17 @@
     <section class="flex flex-col gap-4 px-4">
       <label class="flex flex-col gap-2">
         Peso (KG)
-        <input class="border px-3 py-2 rounded-lg w-full" type="number" placeholder="Ej. 50" value="0" />
+        <input id="peso" class="border px-3 py-2 rounded-lg w-full" type="number" placeholder="Ej. 50" value="0" />
       </label>
       <label>
         ALtura (CM)
-        <input class="border px-3 py-2 rounded-lg w-full" type="number" placeholder="Ej. 170" value="0" />
+        <input id="altura" class="border px-3 py-2 rounded-lg w-full" type="number" placeholder="Ej. 170" value="0" />
       </label>
 
-      <button class="bg-green-600 text-white p-2 rounded-lg">Calcular</button>
+      <button id="calcular" class="bg-green-600 text-white p-2 rounded-lg">Calcular</button>
     </section>
 
-    <section class="mt-5 bg-yellow-400 text-yellow-900 rounded-lg p-3 mx-4 mb-4">
+    <section id="resultado" class="mt-5 bg-yellow-400 text-yellow-900 rounded-lg p-3 mx-4 mb-4">
       Tu indice de Masa Corporal es ...
     </section>
   </main>
