semana07, dia02, javascript todo app simple v1

--- a/semana07/dia02-01-js-todo-app-simple-v1/index.html
+++ b/semana07/dia02-01-js-todo-app-simple-v1/index.html
@@ -21,9 +21,9 @@
     </section>
 
     <ul class="task__list">
-      <li>Aprender Javascript</li>
+      <!-- <li>Aprender Javascript</li>
       <li>Aprender CSS</li>
-      <li>Resolver muchos algoritmos</li>
+      <li>Resolver muchos algoritmos</li> -->
     </ul>
   </main>
 
