semana07, dia02, javascript todo app simple v1

--- a/semana07/dia02-01-js-todo-app-simple-v1/index.html
+++ b/semana07/dia02-01-js-todo-app-simple-v1/index.html
@@ -4,6 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Listado de tareas</title>
+  <style>
+    .seleccionado + span {
+      text-decoration: line-through;
+    }
+  </style>
 </head>
 <body>
   <main class="task">
