semana07, dia03, javascript trivia app tailwind

--- a/semana07/dia03-02-js-trivia-app-reto-tailwind/index.html
+++ b/semana07/dia03-02-js-trivia-app-reto-tailwind/index.html
@@ -7,11 +7,40 @@
   <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
 </head>
 <body>
-  <main>
-    <h1>Trivia de Javascript</h1>
+  <main class="w-96 mx-auto mt-10 border">
+    <h1 class="text-xl font-medium text-gray-800 mb-4">Trivia de Javascript</h1>
 
     <section>
       <!-- Aqui van las preguntas -->
+       <p>1. ¿Pregunta?</p>
+
+      <div>
+        <button>Alternativa 1</button>
+        <button>Alternativa 2</button>
+        <button>Alternativa 3</button>
+        <button>Respuesta correcta</button>
+        <button>Respuesta incorrecta</button>
+      </div>
+
+      <div>
+        <button>Anterior</button>
+        <button>Siguiente</button>
+        <button>Mostrar resultados</button>
+      </div>
+    </section>
+
+    <section>
+      <p>¡GANASTE! o ¡MEJOR SUERTE LA PRÓXIMA!</p>
+
+      <p>Respondiste 2 de 3</p>
+
+      <p>Y este es tu puntaje: 55</p>
+
+      <img src="https://placehold.co/300x100" />
+
+      <div>
+        <button>Empezar de nuevo</button>
+      </div>
     </section>
   </main>
 
