--- a/semana07/dia03-02-js-trivia-app-reto-tailwind/index.html
+++ b/semana07/dia03-02-js-trivia-app-reto-tailwind/index.html
@@ -8,7 +8,10 @@
 </head>
 <body>
   <main class="w-96 mx-auto mt-10">
-    <h1 class="text-xl font-medium text-gray-800 mb-4 text-center">Trivia de Javascript</h1>
+    <div class="flex gap-2 items-center mb-4 justify-center">
+      <img src="./images/logo-js.svg" width="32" height="32" />
+      <h1 class="text-xl font-medium text-gray-800 text-center">Trivia de Javascript</h1>
+    </div>
 
     <section class="flex flex-col px-4 py-6 border border-gray-300 rounded-lg shadow">
       <!-- Aqui van las preguntas -->
@@ -25,9 +28,13 @@
       </div>
 
       <div class="flex justify-end gap-2">
-        <button class="text-gray-800 bg-white hover:bg-gray-100 border border-gray-300 font-medium rounded-lg text-sm px-5 py-2.5 cursor-pointer">Anterior</button>
-        <button class="text-gray-800 bg-white hover:bg-gray-100 border border-gray-300 font-medium rounded-lg text-sm px-5 py-2.5 cursor-pointer">Siguiente</button>
-        <button class="text-gray-800 bg-white hover:bg-gray-100 border border-gray-300 font-medium rounded-lg text-sm px-5 py-2.5 cursor-pointer">Resultados</button>
+        <button class="text-gray-800 bg-white hover:bg-gray-100 border border-gray-300 font-medium rounded-lg text-sm px-5 py-2.5 cursor-pointer">
+           <img src="./images/icon-arrow-left.svg" width="32" height="32" />
+        </button>
+        <button class="text-gray-800 bg-white hover:bg-gray-100 border border-gray-300 font-medium rounded-lg text-sm px-5 py-2.5 cursor-pointer">
+          <img src="./images/icon-arrow-right.svg" width="32" height="32" />
+        </button>
+        <button class="text-gray-800 bg-white hover:bg-gray-100 border border-gray-300 font-medium rounded-lg text-sm px-5 py-2.5 cursor-pointer">Ver Resultados</button>
       </div>
     </section>
 
