--- a/semana07/dia03-02-js-trivia-app-reto-tailwind/index.html
+++ b/semana07/dia03-02-js-trivia-app-reto-tailwind/index.html
@@ -14,32 +14,7 @@
     </div>
 
     <div id="questions-and-results">
-      <section class="flex flex-col px-4 py-6 border border-gray-300 rounded-lg shadow">
-        <!-- Aqui van las preguntas -->
-        <p class="text-md font-medium text-gray-800 mb-4">
-          1. ¿Pregunta?
-        </p>
-
-        <div class="flex flex-col items-start mb-10 gap-2">
-          <button class="border border-blue-700 font-medium rounded-lg text-sm px-5 py-2.5 w-full text-blue-700 text-left hover:bg-blue-800 hover:text-white cursor-pointer">Alternativa 1</button>
-          <button class="border border-blue-700 font-medium rounded-lg text-sm px-5 py-2.5 w-full text-blue-700 text-left hover:bg-blue-800 hover:text-white cursor-pointer">Alternativa 2</button>
-          <button class="border border-blue-700 font-medium rounded-lg text-sm px-5 py-2.5 w-full text-blue-700 text-left hover:bg-blue-800 hover:text-white cursor-pointer">Alternativa 3</button>
-          <button class="border border-red-500 font-medium rounded-lg text-sm px-5 py-2.5 w-full text-white text-left cursor-pointer bg-red-500">Respuesta incorrecta</button>
-          <button class="border border-green-500 font-medium rounded-lg text-sm px-5 py-2.5 w-full text-white text-left cursor-pointer bg-green-500">Respuesta correcta</button>
-        </div>
-
-        <div class="flex justify-end gap-2">
-          <button class="text-gray-800 bg-white hover:bg-gray-100 border border-gray-300 font-medium rounded-lg text-sm px-5 py-2.5 cursor-pointer">
-            <img src="./images/icon-arrow-left.svg" width="32" height="32" />
-          </button>
-          <button class="text-gray-800 bg-white hover:bg-gray-100 border border-gray-300 font-medium rounded-lg text-sm px-5 py-2.5 cursor-pointer">
-            <img src="./images/icon-arrow-right.svg" width="32" height="32" />
-          </button>
-          <button class="text-gray-800 bg-white hover:bg-gray-100 border border-gray-300 font-medium rounded-lg text-sm px-5 py-2.5 cursor-pointer">Ver Resultados</button>
-        </div>
-      </section>
-
-      <section class="hidden flex-col px-4 py-6 text-center bg-green-600 rounded-lg shadow ">
+      <section class=" flex-col px-4 py-6 text-center bg-green-600 rounded-lg shadow ">
         <p class="text-3xl font-medium mb-4 text-white">¡GANASTE! o ¡MEJOR SUERTE LA PRÓXIMA!</p>
 
         <p class="text-md font-medium text-white mb-4">Respondiste 2 de 3</p>
