--- a/semana07/dia03-03-js-todo-app-completo-v2-tailwind/index.html
+++ b/semana07/dia03-03-js-todo-app-completo-v2-tailwind/index.html
@@ -7,37 +7,42 @@
   <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
 </head>
 <body>
-  <main>
-    <section>
-      <h1>
+  <main class="task w-96 mx-auto border rounded-lg shadow mt-10">
+    <section class="flex flex-col px-4 py-6">
+      <h1 class="text-xl font-bold text-gray-800 text-center mb-4">
         Lista de tareas - Completo
       </h1>
 
-      <label>
+      <label class="flex flex-col gap-1 mb-2">
         Ingresa una tarea
         <input
+          class="task__input border border-gray-300 rounded-lg p-2 w-full"
           type="text"
           placeholder="Ej. Aprender Javascript"
         />
       </label>
 
-      <div>
-        <button>Limpiar tareas completadas</button>
+      <div class="flex justify-end mb-4">
+        <button
+          class="task__clear border border-blue-700 font-medium text-sm p-1 px-3 text-blue-700 hover:bg-blue-800 hover:text-white rounded-lg duration-300"
+        >
+          Limpiar tareas completadas
+        </button>
       </div>
 
-      <ul>
-        <li>
+      <ul class="task__list flex flex-col gap-2">
+        <li class="flex justify-center items-center gap-4 hover:bg-gray-100 px-2 py-3 duration-300">
           <input
             type="checkbox"
           />
-          <div>
+          <div class="w-full line-through">
             title task
           </div>
-          <button>
+          <button class="border border-red-600 font-medium text-sm p-1 px-3 text-red-600 hover:bg-red-700 hover:text-white rounded-lg duration-300">
             Borrar
           </button>
         </li>
-        <li>
+        <li class="p-4 bg-yellow-100 text-yellow-800 text-normal rounded-lg text-center font-medium border border-yellow-300">
           No hay tareas registradas
         </li>      </ul>
     </section>
