semana07, dia03, javascript trivia app tailwind

--- a/semana07/dia03-03-js-todo-app-completo-v2-tailwind/index.html
+++ b/semana07/dia03-03-js-todo-app-completo-v2-tailwind/index.html
@@ -7,6 +7,9 @@
   <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
 </head>
 <body>
+  <!-- TODO: Terminar la aplicación de todos añadiendo el limpiado de tareas completadas y validar cuando no hay tareas registradas -->
+   <!-- TODO ADICIONAL: Editar el todo al hacer doble click en el título -->
+
   <main class="task w-96 mx-auto border rounded-lg shadow mt-10">
     <section class="flex flex-col px-4 py-6">
       <h1 class="text-xl font-bold text-gray-800 text-center mb-4">
