semana08, dia01, javascript + es6+

--- a/semana08/dia01-02-javascript-hangman-game/index.html
+++ b/semana08/dia01-02-javascript-hangman-game/index.html
@@ -14,7 +14,7 @@
     <p class="hangman__maskedword text-4xl text-center mb-8">___________</p>
 
     <section class="hangman__buttons grid grid-cols-6 gap-4">
-      <button class="p-2 bg-blue-500 text-white font-bold text-xl cursor-pointer hover:bg-blue-400 duration-300">A</button>
+      <!-- <button class="p-2 bg-blue-500 text-white font-bold text-xl cursor-pointer hover:bg-blue-400 duration-300">A</button> -->
     </section>
 
     <section class="hangman__result hidden text-3xl mt-8 text-center uppercase font-black text-green-500">
