semana08, dia01, javascript + es6+

--- a/semana08/dia01-02-javascript-hangman-game/index.html
+++ b/semana08/dia01-02-javascript-hangman-game/index.html
@@ -17,10 +17,11 @@
       <!-- <button class="p-2 bg-blue-500 text-white font-bold text-xl cursor-pointer hover:bg-blue-400 duration-300">A</button> -->
     </section>
 
-    <section class="hangman__result hidden text-3xl mt-8 text-center uppercase font-black text-green-500">
+    <section class="hangman__results hidden text-3xl mt-8 text-center uppercase font-black text-green-500">
       ¡Ganaste!
     </section>
     
+    <button class="hangman__startagain mt-8 p-2 bg-yellow-500 text-white font-bold text-xl cursor-pointer hover:bg-blue-400 duration-300">Start Again</button>
   </main>
 
   <script src="./main.js"></script>
