semana08, dia01, javascript + word counter reto

--- a/semana08/dia01-03-javacript-word-counter-reto/index.html
+++ b/semana08/dia01-03-javacript-word-counter-reto/index.html
@@ -7,7 +7,27 @@
   <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
 </head>
 <body>
-  
+  <main>
+    <h1>Word Counter</h1>
+
+    <section>
+      <div>
+        <span>Characters</span>
+        <span>0</span>
+      </div>
+      <div>
+        <span>Words</span>
+        <span>0</span>
+      </div>
+      <div>
+        <span>Paragraphs</span>
+        <span>0</span>
+      </div>
+    </section>
+
+    <textarea></textarea>
+  </main>
+
   <script src="./main.js"></script>
 </body>
 </html>
