semana08, dia01, javascript + word counter reto

--- a/semana08/dia01-03-javacript-word-counter-reto/index.html
+++ b/semana08/dia01-03-javacript-word-counter-reto/index.html
@@ -7,6 +7,11 @@
   <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
 </head>
 <body class="h-screen place-content-center">
+  <!--
+    TODO: Terminar esta aplicación usando javascript para el viernes.
+    Necesitamos actualizar el contador de caracteres, palabras y párrafos según escribamos en la caja de texto.
+  -->
+
   <main class="w-80 mx-auto bg-yellow-200 rounded-lg p-4">
     <h1 class="text-3xl text-center">Word Counter</h1>
 
