semana08, dia01, javascript + word counter reto

--- a/semana08/dia01-03-javacript-word-counter-reto/index.html
+++ b/semana08/dia01-03-javacript-word-counter-reto/index.html
@@ -30,7 +30,9 @@
       </div>
     </section>
 
-    <textarea class="w-full h-52 p-2 border border-yellow-600 rounded-lg"></textarea>
+    <textarea
+      class="w-full min-h-40 max-h-52 p-2 border border-yellow-600 rounded-lg resize-none field-sizing-content"
+    ></textarea>
   </main>
 
   <script src="./main.js"></script>
