semana08, dia01, javascript + word counter reto

--- a/semana08/dia02-02-javascript-fetch-reto/index.html
+++ b/semana08/dia02-02-javascript-fetch-reto/index.html
@@ -8,7 +8,7 @@
 <body>
   <h1>Javascript + ES6 + Fetch API - Reto</h1>
 
-  <!-- TODO: Renderizar los nombres de los personas del API y mostrar su nombre y su imagen -->
+  <!-- DONE: Renderizar los nombres de los personas del API y mostrar su nombre y su imagen -->
 
   <div id="app"></div>
 
