semana08, dia01, javascript fetch pokemons

--- a/semana08/dia02-04-javascript-fetch-pokemons/index.html
+++ b/semana08/dia02-04-javascript-fetch-pokemons/index.html
@@ -20,7 +20,7 @@
       <div class="flex justify-center gap-2">
         <button id="firstPage" class="bg-blue-400 hover:bg-blue-500 duration-300 py-2 px-4 rounded-md text-white cursor-pointer">First</button>
         <button id="prevPage" class="bg-blue-400 hover:bg-blue-500 duration-300 py-2 px-4 rounded-md text-white cursor-pointer">Prev</button>
-        <span id="currentPage" class="py-2 px-4 rounded-md font-medium text-2xl">1</span>
+        <span id="currentPage" class="py-2 px-4 rounded-md font-medium text-2xl">Page 1</span>
         <button id="nextPage" class="bg-blue-400 hover:bg-blue-500 duration-300 py-2 px-4 rounded-md text-white cursor-pointer">Next</button>
         <button id="lastPage" class="bg-blue-400 hover:bg-blue-500 duration-300 py-2 px-4 rounded-md text-white cursor-pointer">Last</button>
       </div>
