--- a/semana08/dia02-04-javascript-fetch-pokemons/index.html
+++ b/semana08/dia02-04-javascript-fetch-pokemons/index.html
@@ -27,7 +27,7 @@
     </div>
 
     <form class="flex flex-col gap-2 p-4">
-      <h3 class="text-2xl font-medium">New Pokemon</h3>
+      <h3 class="text-2xl font-medium">Pokemon</h3>
       <input id="id" type="hidden" value="" />
       <input id="name" type="text" placeholder="Pokemon name" required  class="border border-amber-600 p-2 rounded-xl" />
       <input id="image" type="text" placeholder="Pokemon image" class="border border-amber-600 p-2 rounded-xl" />
